--- a/info.yaml
+++ b/info.yaml
@@ -1,23 +1,31 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  title:        "Color Controller"      # Project title
+  author:       "Enrico Sanino"      # Your name
+  discord:      "thexeno"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Controller for RGBW outputs, direct or with color wheel mode with white saturation and light adjustment" # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     66000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt08_thexeno_rgbw_lamp"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
-    - "project.v"
+    - "rgbw_lamp.v"
+    - "color_gen.v"
+    - "mult8x8.v"
+    - "clockDividerPwm.v"
+    - "pwm_gen.v"
+    - "spi_slave.v"
+
+
+
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 pinout:
@@ -25,17 +33,17 @@ pinout:
   ui[0]: ""
   ui[1]: ""
   ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
+  ui[3]: "MOSI"
+  ui[4]: "#CS (from external master)"
+  ui[5]: "SPI SCK (from external master)"
   ui[6]: ""
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
+  uo[0]: "R PWM channel"
+  uo[1]: "G PWM channel"
+  uo[2]: "B PWM channel"
+  uo[3]: "W PWM channel"
   uo[4]: ""
   uo[5]: ""
   uo[6]: ""
