--- a/info.yaml
+++ b/info.yaml
@@ -33,9 +33,9 @@ pinout:
   ui[0]: ""
   ui[1]: ""
   ui[2]: ""
-  ui[3]: "" # ui[3]: "MOSI"
-  ui[4]: "" # ui[4]: "#CS (from external master)"
-  ui[5]: "" # ui[5]: "SPI SCK (from external master)"
+  ui[3]: "mosi" # ui[3]: "MOSI"
+  ui[4]: "n_cs" # ui[4]: "#CS (from external master)"
+  ui[5]: "sck" # ui[5]: "SPI SCK (from external master)"
   ui[6]: ""
   ui[7]: "clk_div_en"
 
@@ -45,19 +45,19 @@ pinout:
   uo[2]: "" #uo[2]: "B PWM channel"
   uo[3]: "" #uo[3]: "W PWM channel"
   uo[4]: "clock_div"
-  uo[5]: ""
+  uo[5]: "rdy"
   uo[6]: ""
   uo[7]: ""
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
-  uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
-  uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[0]: "spirx_0"
+  uio[1]: "spirx_1"
+  uio[2]: "spirx_2"
+  uio[3]: "spirx_3"
+  uio[4]: "spirx_4"
+  uio[5]: "spirx_5"
+  uio[6]: "spirx_6"
+  uio[7]: "spirx_7"
 
 # Do not change!
 yaml_version: 6
