--- a/info.yaml
+++ b/info.yaml
@@ -20,7 +20,7 @@ project:
     - "rgbw_lamp.v"
     - "clockDividerPwm.v"
     # - "pwm_gen.v"
-    # - "spi_slave.v"
+    - "spi_slave.v"
     # - "main_data_dispenser.v"
     # - "color_gen.v"
     # - "mult8x8.v"
