--- a/info.yaml
+++ b/info.yaml
@@ -21,7 +21,7 @@ project:
     - "clockDividerPwm.v"
     # - "pwm_gen.v"
     - "spi_slave.v"
-    # - "main_data_dispenser.v"
+    - "main_data_dispenser.v"
     # - "color_gen.v"
     # - "mult8x8.v"
 
