--- a/test/Makefile
+++ b/test/Makefile
@@ -6,7 +6,7 @@ SIM ?= icarus
 TOPLEVEL_LANG ?= verilog
 SRC_DIR = $(PWD)/../src
 PROJECT_SOURCES = rgbw_lamp.v
-PROJECT_SOURCES += clockDividerPwm.v
+PROJECT_SOURCES += clock_prescaler.v
 PROJECT_SOURCES += color_gen.v
 PROJECT_SOURCES += mult8x8.v
 PROJECT_SOURCES += pwm_gen.v
