--- a/info.yaml
+++ b/info.yaml
@@ -1,9 +1,9 @@
 # Tiny Tapeout project information
 project:
-  title:        "Color Controller"      # Project title
+  title:        "RGBW Color Processor"      # Project title
   author:       "Enrico Sanino"      # Your name
   discord:      "thexeno"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  "Color generator for RGBW LEDs, with generation of hue, tint and intensity based on a color index. Is also a direct SPI to 4 PWM channels converter." # One line description of what your project does
+  description:  "Color processor for RGBW LEDs, with generation of hue, tint and intensity based on a color index. Is also a direct SPI to 4 channels PWM converter." # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     66000000       # Clock frequency in Hz (or 0 if not applicable)
 
